--- a/lupus-frontend/app/shared/navbar/navbar.component.html
+++ b/lupus-frontend/app/shared/navbar/navbar.component.html
@@ -13,6 +13,9 @@
 			<ul class="nav navbar-nav">
 				<li class="active"><a href>Home</a></li>
 			</ul>
+			<ul class="nav navbar-nav navbar-right">
+				<li lupus-logged-user></li>
+			</ul>
 		</div>
 	</div>
 </nav>
