--- a/lupus-frontend/app/shared/logged-user/logged-user.component.html
+++ b/lupus-frontend/app/shared/logged-user/logged-user.component.html
@@ -1,5 +1,8 @@
 <a *ngIf="!sessionService.session" routerLink="/login">Login</a>
 <div *ngIf="sessionService.session">
 	<span *ngIf="!sessionService.user" class="navbar-text">Loading...</span>
-	<span *ngIf="sessionService.user" class="navbar-text">Welcome {{sessionService.user.username}}</span>
+	<span *ngIf="sessionService.user" class="navbar-text">
+		Welcome {{sessionService.user.username}}
+		<a href (click)="logout($event)">Logout</a>
+	</span>
 </div>
