--- a/lupus-frontend/app/shared/navbar/navbar.component.html
+++ b/lupus-frontend/app/shared/navbar/navbar.component.html
@@ -7,14 +7,16 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#">Lupus in Tabula</a>
+			<a class="navbar-brand" routerLink="/">Lupus in Tabula</a>
 		</div>
 		<div id="navbar" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href>Home</a></li>
+				<li [class.active]="isActiveRoute('/')">
+					<a routerLink="/">Home</a>
+				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li lupus-logged-user></li>
+				<li [class.active]="isActiveRoute('/login')" lupus-logged-user></li>
 			</ul>
 		</div>
 	</div>
