Implemented signup page

--- a/lupus-frontend/app/login/login.component.html
+++ b/lupus-frontend/app/login/login.component.html
@@ -13,7 +13,7 @@
 			</div>
 			<div class="form-group">
 				<label for="login-password">Password</label>
-				<input type="password" class="form-control" id="login-username" placeholder="Password"
+				<input type="password" class="form-control" id="login-password" placeholder="Password"
 					name="password" [(ngModel)]="credentials.password">
 			</div>
 			<button type="submit" class="btn btn-default">Login</button>
