--- a/lupus-frontend/app/shared/navbar/navbar.component.html
+++ b/lupus-frontend/app/shared/navbar/navbar.component.html
@@ -11,11 +11,14 @@
 		</div>
 		<div id="navbar" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li [class.active]="isActiveRoute('/')">
+				<li *ngIf="isLoggedIn()" [class.active]="isActiveRoute('/')">
 					<a routerLink="/">Home</a>
 				</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
+				<li *ngIf="!isLoggedIn()" [class.active]="isActiveRoute('/signup')">
+					<a routerLink="/signup">Signup</a>
+				</li>
 				<li [class.active]="isActiveRoute('/login')" lupus-logged-user></li>
 			</ul>
 		</div>
