--- a/lupus-frontend/app/app.component.html
+++ b/lupus-frontend/app/app.component.html
@@ -1,4 +1,5 @@
 <lupus-navbar></lupus-navbar>
+<ng2-slim-loading-bar></ng2-slim-loading-bar>
 <div id="main-container" class="container">
 	<router-outlet></router-outlet>
 </div>
