--- a/lupus-frontend/app/shared/user-badge/user-badge.component.html
+++ b/lupus-frontend/app/shared/user-badge/user-badge.component.html
@@ -1,3 +1,3 @@
-<a [routerLink]="['/user', user.user_id]">
+<a [routerLink]="['/user', currentUser ? '' : user.user_id]">
 	<span class="label {{labelClass()}}">{{user.username}}</span>
 </a>
