--- a/lupus-frontend/app/user/user.component.html
+++ b/lupus-frontend/app/user/user.component.html
@@ -1,4 +1,4 @@
-<span *ngIf="!user"><em>Loading...</em></span>
+<span *ngIf="!user"><lupus-loading></lupus-loading></span>
 <div *ngIf="user">
 
 <h1>{{user.username}} <small>{{user.name}} {{user.surname}}</small></h1>
