In the frontend the owner can chage game status

--- a/lupus-frontend/app/game/game-states/game-state-open.component.html
+++ b/lupus-frontend/app/game/game-states/game-state-open.component.html
@@ -1,2 +1,6 @@
 <h1>The game is in open state</h1>
-<strong *ngIf="isAdmin">You are the admin!</strong>
+<div *ngIf="isAdmin">
+	<h2>You are the admin!</h2>
+
+	<button class="btn btn-warning" (click)="closeGame()">Close the game</button>
+</div>
