Added number of members and start button

--- a/lupus-frontend/app/game/game-states/game-state-closed.component.html
+++ b/lupus-frontend/app/game/game-states/game-state-closed.component.html
@@ -2,6 +2,10 @@
 	<h2>You are the admin of this game</h2>
 
 	<button class="btn btn-success" (click)="openGame()">Open this game</button>
+	<button class="btn btn-success" (click)="startGame()"
+		[disabled]="game.members.length < game.gen_info.min_players">
+		Start the game!
+	</button>
 </div>
 <div *ngIf="isMember">
 	<h2>You are a member of this game</h2>
