--- a/lupus-frontend/app/game/game-states/game-state-running.component.html
+++ b/lupus-frontend/app/game/game-states/game-state-running.component.html
@@ -4,11 +4,11 @@
 
 <lupus-players-list [game]="game"></lupus-players-list>
 
-<div *ngIf="isMember">
+<div *ngIf="player">
 	<lupus-game-splash [game]="game"></lupus-game-splash>
 
-	<div class="row">
-		<div *ngIf="player.extra && player.extra.needVote" class="col-md-4">
+	<div class="row" *ngIf="player.extra">
+		<div *ngIf="player.extra.needVote" class="col-md-4">
 			{{player.extra.needVote.message}}
 
 			<div class="form-group">
@@ -21,5 +21,8 @@
 
 			<button class="btn btn-success" (click)="vote()">Vote</button>
 		</div>
+	</div>
+	<div *ngIf="!player.extra">
+		<em>Loading...</em>
 	</div>
 </div>
