Added partial implementation of game-manager
This class will check if all the players have voted and if so, all the players will perform its actions

It will also check if the game is ended (to be implemented)

--- a/lupus-frontend/app/game/game-states/game-state-running.component.html
+++ b/lupus-frontend/app/game/game-states/game-state-running.component.html
@@ -1,3 +1,9 @@
+<span class="badge pull-right">
+	<span *ngIf="game.state.day % 2 == 0">Day</span>
+	<span *ngIf="game.state.day % 2 == 1">Night</span>
+	{{game.state.day}}
+</span>
+
 <div *ngIf="isAdmin">
 	<h2>You are the admin of this game</h2>
 </div>
