Fixed bug with protection
The seer now knows who watched
Fix on the frontend
Added a new simulation

--- a/lupus-frontend/app/game/game-states/game-state-running.component.html
+++ b/lupus-frontend/app/game/game-states/game-state-running.component.html
@@ -17,7 +17,7 @@
 		<div *ngIf="player.extra.needVote" class="col-md-4">
 			<lupus-templater *ngIf="player.extra.extraMessage" [rawTemplate]="player.extra.extraMessage"></lupus-templater>
 
-			{{player.extra.needVote.message}}
+			<p>{{player.extra.needVote.message}}</p>
 
 			<div class="form-group">
 				<select class="form-control" [(ngModel)]="current_vote">
